0.1.1

  User-visible changes:
   * Add support for new cclive options (0.2.4+)
     - --stream-exec, --stream
   * Add missing statusbar messages for menu items
   * Change "Save video as" label to checkbox
   * Change following widgets to reflect video link changes dynamically:
     - Continue partially transferred file
     - (Download video) Format
   * Clean up widget texts


0.1.0
(March 1, 2009)

  * Initial release