@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>248</height>
+    <width>517</width>
+    <height>212</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -43,6 +43,19 @@
        <string>&amp;General</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2" >
+       <item row="3" column="0" >
+        <spacer name="verticalSpacer_5" >
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0" >
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
        <item row="0" column="0" >
         <layout class="QHBoxLayout" name="horizontalLayout_6" >
          <item>
@@ -136,19 +149,6 @@ Example: /usr/local/bin/mplayer %i</string>
           </widget>
          </item>
         </layout>
-       </item>
-       <item row="3" column="0" >
-        <spacer name="verticalSpacer_5" >
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0" >
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -395,6 +395,35 @@ been flagged as mature content.</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_6" >
        <item row="0" column="0" >
+        <layout class="QHBoxLayout" name="horizontalLayout_9" >
+         <item>
+          <widget class="QLabel" name="label_9" >
+           <property name="text" >
+            <string>&amp;Title character-class</string>
+           </property>
+           <property name="buddy" >
+            <cstring>cclassEdit</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="cclassEdit" >
+           <property name="toolTip" >
+            <string>Character-class used to clean up video page
+titles before they are used for naming the
+downloaded video files.
+
+Leave empty if unsure. This causes the default
+\w character-class to be used.
+
+For more on Perl character-classes:
+  &lt;http://perldoc.perl.org/perlrequick.html></string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="0" >
         <layout class="QHBoxLayout" name="horizontalLayout_2" >
          <item>
           <widget class="QLabel" name="label_6" >
@@ -424,7 +453,7 @@ been flagged as mature content.</string>
          </item>
         </layout>
        </item>
-       <item row="1" column="0" >
+       <item row="2" column="0" >
         <spacer name="verticalSpacer_3" >
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -444,7 +473,6 @@ been flagged as mature content.</string>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>tabWidget</tabstop>
   <tabstop>savedirEdit</tabstop>
   <tabstop>savedirButton</tabstop>
   <tabstop>streamEdit</tabstop>
@@ -461,8 +489,10 @@ been flagged as mature content.</string>
   <tabstop>youtubeGroup</tabstop>
   <tabstop>ytuserEdit</tabstop>
   <tabstop>ytpassEdit</tabstop>
+  <tabstop>cclassEdit</tabstop>
   <tabstop>langCombo</tabstop>
   <tabstop>buttonBox</tabstop>
+  <tabstop>tabWidget</tabstop>
  </tabstops>
  <resources/>
  <connections>
